<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/report_photo"
                android:id="@+id/display_post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/display_post_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/productsansregular"
                tools:text="My Awesome Title"
                android:textSize="28sp"
                android:layout_weight="1"/>
            <ImageView
                android:contentDescription="@string/share_button"
                android:id="@+id/share_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_share_24dp"
                android:tint="@color/colorAccent"
                />

        </LinearLayout>



        <TextView
            android:id="@+id/display_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/productsansregular"
            tools:text="Description"
            android:textSize="16sp" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:background="@color/colorAccent">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:fontFamily="@font/productsansregular"
               android:text="@string/location"
               android:textColor="#fff"
               android:textSize="28sp" />

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp">
               <ImageView
                   android:contentDescription="@string/location_image"
                   android:id="@+id/display_post_location_img"
                   android:layout_width="match_parent"
                   android:layout_margin="10dp"
                   android:layout_height="300dp"
                   android:layout_gravity="center"
                   android:scaleType="fitXY"
                   android:src="@drawable/ic_launcher_background" />
           </android.support.v7.widget.CardView>
       </LinearLayout>

    </LinearLayout>

</ScrollView>