<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/productsansregular"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:minLines="1"
            android:fontFamily="@font/productsansregular"
            android:textSize="15sp"
            android:layout_weight="2"/>
        <EditText
            android:inputType="text"
            android:id="@+id/dialog_edittext_name"
            android:layout_weight="1"
            android:maxLines="1"
            android:fontFamily="@font/productsansregular"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/productsansregular"
            android:minLines="1"
            android:textSize="15sp"
            android:layout_weight="4"/>
        <EditText
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:textSize="14sp"
            android:fontFamily="@font/productsansregular"
            android:id="@+id/dialog_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/productsansregular"
            android:minLines="1"
            android:textSize="15sp"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/dialog_edittext_psswrd"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:fontFamily="@font/productsansregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />
    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/dialog_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/productsansregular"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/dialog_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/productsansregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/dialog_edittext_psswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsansregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_user_btn"
            style="@style/blueButton"
            android:layout_width="180dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/create_account"/>

    </LinearLayout>


</LinearLayout>