<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/reportImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/camImgBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/ic_photo_camera_24dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_title_24dp"
                android:tint="@color/colorAccent"
                />

            <EditText
                android:fontFamily="@font/productsansregular"
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <ImageView
                android:tint="@color/colorAccent"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_description_24dp"
                />

            <EditText
                android:fontFamily="@font/productsansregular"
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">



            <FrameLayout
                android:id="@+id/post_location"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:fontFamily="@font/productsansregular"
                    style="@style/captionOnly"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_location_on_24dp"
                    android:text="@string/location_select"

                    />

            </FrameLayout>
            <ImageView
                android:id="@+id/mapView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:fontFamily="@font/productsansregular"
                android:background="@drawable/button_style"
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/submit"
                android:layout_weight="1"
                android:textColor="#fff"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:fontFamily="@font/productsansregular"
                android:layout_weight="1"
                android:id="@+id/clear_button"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/clear"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>



